--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <![endif]-->
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <header id="header">
                     <nav class="navbar navbar-default" role="navigation">
-                        <div class="container-fluid">
+                        <div class="container">
                             <div class="navbar-header">
 
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#top-navbar-collapse-1">
@@ -60,13 +60,13 @@
             </header><!-- end #header -->
         </div>
 
-        <div class="container">
+        <div class="container-fluid">
             <div id="content">
                 <div class="last_updated">Ultima actualização: <span class="last_updated_time">Recebendo...</span></div>
             </div><!-- end #content -->
         </div><!-- end .wrapper -->
 
-        <div class="container">
+        <div class="container-fluid">
             <footer id="footer">
                 <nav>
                     <ul class="list-inline">
@@ -79,8 +79,8 @@
             </footer>
         </div>
         <div class="sample">
-            <div class="image-holder pull-left"><img class="image img-responsive img-rounded" src="" /></div>
-            <div class="data-holder">
+            <div class="image-holder pull-left .col-xs-4"><img class="image img-responsive img-rounded" src="" /></div>
+            <div class="data-holder .col-xs-8">
                 <ul>
                     <li class="title"></li>
                     <li class="genre"></li>
@@ -138,7 +138,7 @@
 
                         if (movies[i].time != '')
                             holder.find('.sessions').text('Sessões: ' + movies[i].time);
-
+                        holder.wrap('<div class="row"></div>')
                         $('#content').append(holder)
                     };
                 },
