--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class="container-fluid">
             <div id="content">
-                <div class="last_updated">Ultima actualização: <span class="last_updated_time">Recebendo...</span></div>
+                <div class="last_updated">Actualizado: <span class="last_updated_time">Recebendo...</span></div>
             </div><!-- end #content -->
         </div><!-- end .wrapper -->
 
