Fixed issues and moved pre-processing functions to main core page

--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
                     <li class="genre"></li>
                     <li class="director"></li>
                     <li class="actors"></li>
+                    <li class="debut"></li>
+                    <li class="original_title"></li>
                     <li class="duration"></li>
-                    <li class="synopsis"></li>
                     <li class="room"></li>
-                    <li class="sessions"></li>
+                    <li class="sessions"><span class="times"></span>&nbsp;|&nbsp;<a href="#" class="buy">Comprar Bilhete</a</li>
+                    <li class="synopsis"></li>
                 </ul>
             </div>
             <div class="clearfix"></div>
