Changed regex for sessions along with some minor string formating

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <li class="original_title"></li>
                     <li class="duration"></li>
                     <li class="room"></li>
-                    <li class="sessions"><span class="times"></span>&nbsp;|&nbsp;<a href="#" class="buy">Comprar Bilhete</a</li>
+                    <li class="sessions"><span class="times"></span>&nbsp;|&nbsp;<a href="#" class="buy">Comprar Bilhetes</a</li>
                     <li class="synopsis"></li>
                 </ul>
             </div>
