--- a/index.html
+++ b/index.html
@@ -74,15 +74,18 @@
             <div class="data-holder .col-xs-10">
                 <ul>
                     <li class="title"></li>
-                    <li class="genre"></li>
-                    <li class="director"></li>
-                    <li class="actors"></li>
-                    <li class="debut"></li>
-                    <li class="original_title"></li>
-                    <li class="duration"></li>
                     <li class="room"></li>
-                    <li class="sessions"><span class="times"></span>&nbsp;|&nbsp;<a href="#" class="buy">Comprar Bilhetes</a</li>
-                    <li class="synopsis"></li>
+                    <li class="sessions"><span class="times"></span>&nbsp;|&nbsp;<a href="#" class="buy">Comprar Bilhetes</a></li>
+                        <ul class="moreinfo">
+                            <li class="original_title"></li>
+                            <li class="duration"></li>
+                            <li class="genre"></li>
+                            <li class="director"></li>
+                            <li class="actors"></li>
+                            <li class="debut"></li>
+                            <li class="synopsis"></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="clearfix"></div>
