--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <link rel="stylesheet" href="static/css/default.css" type="text/css" media="screen" charset="utf-8" />
 
         <!-- scripts -->
-        <script type="text/javascript" src="static/js/jquery-1.11.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -50,8 +53,8 @@
         </div>
 
         <div class="container">
+            <span class="glyphicon glyphicon-refresh spinning" style="margin: 5% 50%;"></span>
             <div id="content">
-                <div class="last_updated">Actualizado: <span class="last_updated_time">Recebendo...</span></div>
             </div><!-- end #content -->
         </div><!-- end .wrapper -->
 
@@ -68,29 +71,15 @@
             </footer>
         </div>
 
-        <!-- HTML base sample -->
-        <div class="sample">
-            <div class="image-holder pull-left .col-xs-2"><img class="image img-responsive img-rounded" src="" /></div>
-            <div class="data-holder .col-xs-10">
-                <ul>
-                    <li class="title"></li>
-                    <li class="room"></li>
-                    <li class="sessions"><span class="times"></span>&nbsp;|&nbsp;<a href="#" class="buy">Comprar Bilhetes</a></li>
-                        <ul class="moreinfo">
-                            <li class="original_title"></li>
-                            <li class="duration"></li>
-                            <li class="genre"></li>
-                            <li class="director"></li>
-                            <li class="actors"></li>
-                            <li class="debut"></li>
-                            <li class="synopsis"></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="clearfix"></div>
-        </div>
         <!-- Javascripts -->
-        <script type="text/javascript" src="static/js/app.js"></script>
+        <script type="text/babel" src="static/js/app.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('#content').on('click', '.movie', function(e) {
+                    $(this).find('.moreinfo').toggle();
+                    e.preventDefault();
+                });
+            })
+        </script>
     </body>
 </html>
